Switch to using VarHandle where appropriate.